# vsomeip

./: README.md
examples/hello_world/: hello_world_client.hpp  hello_world_client_main.cpp  hello_world_service.hpp  hello_world_service_main.cpp
examples/hello_world_commonAPI/: CMakeLists.txt  Readme
examples/hello_world_commonAPI/src/: E01HelloWorldClient.cpp
examples/hello_world_commonAPI/src-gen/v0/commonapi/examples/: E01HelloWorldProxy.hpp  E01HelloWorldProxyBase.hpp  E01HelloWorldSomeIPDeployment.cpp  E01HelloWorldSomeIPDeployment.hpp  E01HelloWorldSomeIPStubAdapter.cpp  E01HelloWorldSomeIPStubAdapter.hpp  E01HelloWorldStub.hpp  E01HelloWorldStubDefault.hpp
examples/taikt/: README
examples/taikt/E03Methods/: CMakeLists.txt  README
examples/taikt/E03Methods/fidl/: E03Methods-SomeIP.fdepl
examples/taikt/E03Methods/src/: E03MethodsClient.cpp
examples/taikt/hello_world_commonAPI/: CMakeLists.txt  Readme
examples/taikt/hello_world_commonAPI/src/: E01HelloWorldClient.cpp
examples/taikt/hello_world_commonAPI/src-gen/v0/commonapi/examples/: E01HelloWorld.hpp  E01HelloWorldSomeIPProxy.cpp  E01HelloWorldSomeIPProxy.hpp
implementation/configuration/include/: internal.hpp.in
implementation/logger/src/: message.cpp
implementation/runtime/src/: application_impl.cpp  debug.hpp
